Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-25936

Crash during DDL that involves FULLTEXT INDEX

    XMLWordPrintable

Details

    Description

      In a recent 10.6-based branch, the following was observed:

      innodb.foreign_key 'innodb,read-ahead'   w2 [ fail ]
              Test ended at 2021-06-15 07:34:57
       
      CURRENT_TEST: innodb.foreign_key
      mysqltest: At line 165: query 'DROP DATABASE best' failed: <Unknown> (2013): Lost connection to server during query
      2021-06-15 07:34:56 0xaf95eb40  InnoDB: Assertion failure in file /home/buildbot/buildbot/build/mariadb-10.6.2/storage/innobase/dict/dict0dict.cc line 1895
      InnoDB: Failing assertion: table->get_ref_count() == 0
      

      thiru was able to repeat this locally. The reason turned out to be a race condition in the fts_lock_table() check that tries to ensure that no purge task is executing on an internal FTS_ table.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1.5h
                  1.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.